# link-collection-rust

./: .env.local.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  Cargo.toml  Makefile  NATS_LISTENER_INTEGRATION.md  PIPELINE_VERIFICATION.md  README.md  STRICTDOC_PIPELINE.md  backlog.md  config.toml.sample  docker-compose.yml  hn  pyproject.toml  requirements.sdoc
.github/workflows/: pipeline.yml
app/: Cargo.toml
app/src/: commands.rs  configuration.rs  lib.rs  print.rs
app/src/config/: loader.rs  mod.rs  structs.rs
app/tests/: config_integration_tests.rs
app/tests/data/: links.rec  new-record-1.txt
app/tests/template/: cli-short.mustache
data/database/: links.rec
data/template/: storage.mustache
data_access/: Cargo.toml
data_access/data/: links.rec
data_access/src/: dto.rs  lib.rs  recutils_database.rs
domain/src/: interfaces.rs  lib.rs  tags.rs
downloader/: Cargo.toml
downloader/src/: downloader.rs  lib.rs
downloader/tests/http-stubs/: Dockerfile  Makefile  stubs.yaml
downloader/tests/http-stubs/api/v1/reservations/1/: response.json
downloader/tests/http-stubs/v0/item/12339182329.json/: response.json
downloader/tests/http-stubs/v0/item/40500429.json/: response.json
infra/: Cargo.toml
infra/src/: cli_line_reader.rs  date.rs  file_record_reader.rs  fzf_selector.rs  hacker_news_importer.rs  hardcoded.rs  lib.rs  tags.rs
makefiles/: app.mk  clippy.mk  meta.mk  rust.mk  strictdoc.mk  test.mk
nats-listener/: Cargo.toml  Makefile  README.md
nats-listener/src/: client.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs
nats-listener/tests/: integration_tests.rs
requirements/: hlr.sdoc  llr.sdoc  requirements.sdoc
select/: Cargo.toml
select/src/: commands.rs  common.rs  configuration.rs  lib.rs  main.rs
select/tests/data/: links.rec  new-record-1.txt
stubs/: Cargo.toml  Dockerfile
stubs/src/: main.rs
