[package]
name = "select"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rrecutils = { git = "https://github.com/aisamanra/rrecutils.git", version = "0.1.0" }
domain = { path = "../domain" }
data_access = { path = "../data_access" }
rustache = "0.1.0"
infra = { path = "../infra" }
downloader = { path = "../downloader" }
log = { workspace = true }
env_logger = { workspace = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
