[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "=0.13.3", features = ["json", "blocking"] }
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
domain = { path = "../domain" }
chrono = "=0.4.44"
log = { workspace = true }
