[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "=0.4.44"
domain = { path = "../domain" }
mockall = "=0.14.0"
rustyline = "=18.0.0"
downloader = { path = "../downloader" }
log = { workspace = true }

[dependencies.uuid]
version = "=1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
