[package]
name = "nats-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
nats = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
