[package]
name = "nats-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.52.1", features = ["full"] }
nats = "=0.26.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
log = "=0.4.29"
env_logger = "=0.11.10"
uuid = { version = "=1.23.1", features = ["v4", "serde"] }
chrono = { version = "=0.4.44", features = ["serde"] }
thiserror = "=2.0.18"
clap = { version = "=4.6.1", features = ["derive"] }

[dev-dependencies]
tokio-test = "=0.4.1"
